k8s/staging/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: rishat-space-staging
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: rishat-space
  name: rishat-space
  namespace: rishat-space-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rishat-space
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: rishat-space
    spec:
      containers:
        - ports:
            - containerPort: 80
          image: skeletondocker/rishat.space:sha-0575124ce833c0e9edde43eb53765088e3ceb91a
          name: rishat-space
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: rishat-space-staging-service
  namespace: rishat-space-staging
spec:
  selector:
    app: rishat-space
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
